# machine-learning

./: Cargo.toml  Naive-Bayes-Classification-Data.csv  fake_bills.csv
src/: k_mean_clustering.rs  knn.rs  lib.rs  main.rs  softmax.rs  util.rs
src/gradient_descent/: mod.rs  momentum.rs  normal.rs
src/naive_bayes/: gaussian.rs  gaussian_naive_bayes.rs  mod.rs  normal.rs
src/pla/: binary.rs
src/regression/: linear.rs  logistic.rs  mod.rs
src/util/: csv.rs  gradient.rs  mod.rs  pad.rs
