[package]
name = "statistic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
cached = "0.53.1"
csv = "1.3.0"
itertools = "0.13.0"
linreg = "0.2.0"
nalgebra = { version = "0.33.0", features = ["rand"] }
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
num-rational = "0.4.2"
rayon = "1.10.0"
